# RootEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  RootEngine.sln  RootsEngine.sln
Render Pipeline/: CMakeLists.txt  Camera.cpp  Camera.hpp  Render Pipeline.vcxproj  Render Pipeline.vcxproj.filters  diamond.txt  render_object.cpp  render_object.hpp  render_pipeline.cpp  shader.cpp  shader.fs  shader.hpp  shader.vs  v_shader.vertshader
Render Pipeline/third party/src/: ufbx.c
RootEngine/: Console.cpp  Console.hpp  RootEngine.vcxproj  RootEngine.vcxproj.filters  main.cpp
RootsEngine/: CMakeLists.txt  Console.cpp  EngineDesign.md  RootsEngine.vcxproj  RootsEngine.vcxproj.filters  main.cpp  roots-engine_main.cpp
RootsEngine/Console/include/: Console.hpp
RootsEngine/Entity/include/: Entity.hpp
RootsEngine/GameWorld/: GameWorld.cpp
RootsEngine/GameWorld/include/: GameWorld.hpp
RootsEngine/Item/: Item.cpp
RootsEngine/Item/include/: Item.hpp
RootsEngine/NPC/: NPC.cpp
RootsEngine/NPC/include/: NPC.hpp
RootsEngine/include/: Console.hpp
Testing/: CMakeLists.txt  GameWorld.cpp  GameWorld.hpp  RenderObj.hpp  Testing.vcxproj  Testing.vcxproj.filters  f_shader.fragshader  shader.cpp  shader.h  test_main.cpp  v_shader.vertshader
Testing/include/: RootsObj.hpp  shader.h
Testing/include/GameWorld/: GameWorld.hpp
Testing/src/: GameWorld.cpp  RootsObj.cpp  shader.cpp
Testing/third party/include/: ufbx.h
Testing/third party/src/: glad.c
rootengine-frontend/: CMakeLists.txt  frontend_main.cpp
rootengine-frontend/Console/: Console.cpp
rootengine-frontend/Console/include/: Console.hpp
rootengine-frontend/Entity/: Entity.cpp
rootengine-frontend/Entity/include/: Entity.hpp
rootengine-frontend/GameWorld/: GameWorld.cpp
rootengine-frontend/GameWorld/include/: GameWorld.hpp
rootengine-frontend/Item/: Item.cpp
rootengine-frontend/Item/include/: Item.hpp
rootengine-frontend/NPC/: NPC.cpp
rootengine-frontend/NPC/include/: NPC.hpp
rootengine-frontend/Player/: Player.cpp
rootengine-frontend/Player/include/: Player.hpp
